--- a/.gitmodules
+++ b/.gitmodules
@@ -6,6 +6,10 @@
   path = plugins/zsh-syntax-highlighting
   url = https://github.com/zsh-users/zsh-syntax-highlighting.git
   shallow = true
+[submodule "plugins/zsh-history-substring-search"]
+  path = plugins/zsh-history-substring-search
+  url = https://github.com/zsh-users/zsh-history-substring-search.git
+  shallow = true
 [submodule "plugins/z.lua"]
   path = plugins/z.lua
   url = https://github.com/skywind3000/z.lua.git
